html correction and more css styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="header">
         <div class="header__inner">
-            <div class="hearder__inner-left">
+            <div class="header__inner-left">
                 <div class="mobile-menu-icon">
                     <i class="fas fa-bars"></i>
                 </div>
